[package]
name = "awa"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.13"
image = "0.25.10"
pixels = "0.16.0"
rdev = "0.5.3"
serde_json = "1.0.149"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
true = "0.1.0"
anyhow = "1.0.102"


[target.'cfg(windows)'.dependencies]
windows = "0.62.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.2"

[profile.release]
opt-level = 3
strip = true
lto = true
